--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
     <script data-main="js/main" src="js/lib/require.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>Header here</h1>
+      <div id="main">
+        Getting started...
+      </div>
+    </div>
   </body>
 </html>
