Working map view

--- a/src/index.html
+++ b/src/index.html
@@ -24,26 +24,9 @@
       </div>
     </div>
 
-    <div class="pure-g">
-        <div class="pure-u-1"><div id="map"></div></div>
-    </div>
+    <div id="map-region"></div>
 
-    <div class="pure-g">
-        <div class="pure-u-1">Stuff</div>
-    </div>
+    <div id="graph-region"></div>
 
-    <div class="pure-g graph">
-        <div class="pure-u-1"><div class="tools">Tools</div></div>
-        <div class="pure-u-1">Graph 1</div>
-    </div>
-
-
-
-    <!--<div id="app">
-      <h1>Header here</h1>
-      <div id="main">
-        Getting started...
-      </div>
-    </div>-->
   </body>
 </html>
