Working graphs for one sensor

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     <link href="css/leaflet.css" rel="stylesheet" media="screen">
     <link href="css/app.css" rel="stylesheet" media="screen">
+    <link href="css/chartist.min.css" rel="stylesheet" media="screen">
 
     <script data-main="js/main" src="js/lib/require.js"></script>
   </head>
@@ -24,9 +25,12 @@
       </div>
     </div>
 
-    <div id="map-region"></div>
+    <div id="header">
+      <div id="sparkline-region"></div>
+      <div id="map-region"></div>
+    </div>
 
-    <div id="graph-region"></div>
+    <div id="graphs-region"></div>
 
   </body>
 </html>
