Working city page

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
 
     <div id="header">
       <div id="sparkline-region"></div>
-      <div id="map-region"></div>
+      <div id="map"></div>
     </div>
 
-    <div id="graphs-region"></div>
+    <div id="main-region"></div>
 
   </body>
 </html>
