--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <script data-main="js/main" src="js/lib/require.js"></script>
   </head>
   <body>
-    <div class="header">
+    <div class="menu">
       <div class="pure-menu pure-menu-open pure-menu-horizontal">
           <a class="pure-menu-heading" href="">Data Canvas</a>
 
