Lots of changes to city and sensor views, hide show, etc

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,17 @@
       </div>
     </div>
 
-    <div id="header">
+    <header>
       <div id="sparkline-region"></div>
       <div id="map"></div>
-    </div>
+    </header>
 
     <div id="main-region"></div>
+
+    <footer>
+      Data Canvas is a Partnership between <a href="">Gray Area Foundation</a>, <a href="">swissnex San Francisco</a>, <a href="">Lift</a>
+
+      <div class="logo">logo here</div>
+    </footer>
   </body>
 </html>
