Start implementing design 3.2

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 
     <title>Sense Your City</title>
 
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900' rel='stylesheet' type='text/css'>
     <link href="css/leaflet.css" rel="stylesheet" media="screen">
     <link href="css/app.css" rel="stylesheet" media="screen">
 
