Start loading live sensor data

--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,19 @@
     <div class="menu">
       <div class="pure-menu pure-menu-open pure-menu-horizontal">
           <a class="pure-menu-heading" href="">Data Canvas</a>
-
+          <a class="pure-menu-heading hamburger" href=""><i class="fa fa-bars"></i></a>
           <ul>
               <li class="pure-menu-selected"><a href="#">Access Data</a></li>
               <li><a href="#">About Data Canvas</a></li>
               <li><a href="#">Resources &amp; Tools</a></li>
           </ul>
+          <a class="pure-menu-heading" href="">datacanvas.org</a>
       </div>
     </div>
 
     <header>
-      <div id="sparkline-region"></div>
       <div id="map"></div>
+      <div id="sparkline-region"></div>
     </header>
 
     <div id="main-region"></div>
