Add async and logos

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
   <body>
     <div class="menu">
       <div class="pure-menu pure-menu-open pure-menu-horizontal">
-          <a class="pure-menu-heading" href="">Data Canvas</a>
+          <a class="pure-menu-heading logo" href="">Sense Your City</a>
           <a class="pure-menu-heading hamburger" href=""><i class="fa fa-bars"></i></a>
           <ul>
-              <li class="pure-menu-selected"><a href="#">Access Data</a></li>
+              <li class="pure-menu-selected"><a href="#">Get Data</a></li>
               <li><a href="#">About Data Canvas</a></li>
               <li><a href="#">Resources &amp; Tools</a></li>
           </ul>
-          <a class="pure-menu-heading" href="">datacanvas.org</a>
+          <a class="pure-menu-heading logo logo-grayscale" href="">datacanvas.org</a>
       </div>
     </div>
 
@@ -32,6 +32,11 @@
     </header>
 
     <div id="main-region"></div>
+
+    <div class="tweet">
+      Temperatura em #Niteroi #RioDeJaneiro nos últimos dias frequentemente acima dos 30C tobie.github.io/datacanvas-vi... #DataCanvas #Sensors #Arduino
+      About 15 hours ago from Rodrigo Padula's Twitter via Twitter Web Client
+    </div>
 
     <footer>
       Data Canvas is a Partnership between <a href="">Gray Area Foundation</a>, <a href="">swissnex San Francisco</a>, <a href="">Lift</a>
