Add data download page

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
   <body>
     <div class="menu">
       <div class="pure-menu pure-menu-open pure-menu-horizontal">
-          <a class="pure-menu-heading logo" href="">Sense Your City</a>
+          <a class="pure-menu-heading logo" href="#">Sense Your City</a>
           <a class="pure-menu-heading hamburger" href=""><i class="fa fa-bars"></i></a>
           <ul>
-              <li class="pure-menu-selected"><a href="#">Get Data</a></li>
+              <li class="pure-menu-selected"><a href="#!/data">Get Data</a></li>
               <li><a href="#">About Data Canvas</a></li>
               <li><a href="#">Resources &amp; Tools</a></li>
           </ul>
-          <a class="pure-menu-heading logo logo-grayscale" href="">datacanvas.org</a>
+          <a class="pure-menu-heading logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
       </div>
     </div>
 
@@ -41,7 +41,7 @@
     <footer>
       Data Canvas is a Partnership between <a href="">Gray Area Foundation</a>, <a href="">swissnex San Francisco</a>, <a href="">Lift</a>
 
-      <div class="logo">logo here</div>
+      <a class="pure-menu-heading logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
     </footer>
   </body>
 </html>
