Add action arrows to graphs

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,9 @@
     <div id="main-region"></div>
 
     <div class="tweet">
-      Temperatura em #Niteroi #RioDeJaneiro nos últimos dias frequentemente acima dos 30C tobie.github.io/datacanvas-vi... #DataCanvas #Sensors #Arduino
-      About 15 hours ago from Rodrigo Padula's Twitter via Twitter Web Client
+      <p>Temperatura em <a href="#">#Niteroi</a> <a href="#">#RioDeJaneiro</a> nos últimos dias frequentemente acima dos 30C tobie.github.io/datacanvas-vi... <a href="#">#DataCanvas</a> <a href="#">#Sensors</a> <a href="#">#Arduino</a></p>
+
+      <p class="source">About 15 hours ago from Rodrigo Padula's Twitter via Twitter Web Client</p>
     </div>
 
     <footer>
