Add the logo to the footer

--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
     </div>
 
     <footer>
-      Data Canvas is a Partnership between <a href="">Gray Area Foundation</a>, <a href="">swissnex San Francisco</a>, <a href="">Lift</a>
+      <p>Data Canvas is a Partnership between <a href="">Gray Area Foundation</a>, <a href="">swissnex San Francisco</a>, <a href="">Lift</a></p>
 
-      <a class="pure-menu-heading logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
+      <a class="logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
     </footer>
   </body>
 </html>
