Overhaul of sparklines, download page, and more

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
           <a class="pure-menu-heading hamburger" href=""><i class="fa fa-bars"></i></a>
           <ul>
               <li class="pure-menu-selected"><a href="#!/data">Get Data</a></li>
-              <li><a href="#">About Data Canvas</a></li>
-              <li><a href="#">Resources &amp; Tools</a></li>
+              <li><a href="http://datacanvas.org/sense-your-city">About Data Canvas</a></li>
           </ul>
-          <a class="pure-menu-heading logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
+<!--           <a class="pure-menu-heading logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
+ -->
       </div>
     </div>
 
@@ -33,16 +33,28 @@
 
     <div id="main-region"></div>
 
-    <div class="tweet">
+<!--     <div class="tweet">
       <p>Temperatura em <a href="#">#Niteroi</a> <a href="#">#RioDeJaneiro</a> nos últimos dias frequentemente acima dos 30C tobie.github.io/datacanvas-vi... <a href="#">#DataCanvas</a> <a href="#">#Sensors</a> <a href="#">#Arduino</a></p>
 
       <p class="source">About 15 hours ago from Rodrigo Padula's Twitter via Twitter Web Client</p>
     </div>
-
+ -->
     <footer>
-      <p>Data Canvas is a Partnership between <a href="">Gray Area Foundation</a>, <a href="">swissnex San Francisco</a>, <a href="">Lift</a></p>
+      <p>Data Canvas is a Partnership between <a href="http://grayarea.org/">Gray Area Foundation</a>, <a href="http://www.swissnexsanfrancisco.org/">swissnex San Francisco</a>, and <a href="http://liftconference.com/lift15">Lift</a></p>
 
-      <a class="logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
+<!--       <a class="logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
+ -->
     </footer>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-39867070-4', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
