New descriptive text, api text

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,9 @@
     <footer>
       <p>Data Canvas is a Partnership between <a href="http://grayarea.org/">Gray Area Foundation</a>, <a href="http://www.swissnexsanfrancisco.org/">swissnex San Francisco</a>, and <a href="http://liftconference.com/lift15">Lift</a></p>
 
-      <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a> with design from <a href="http://www.officevsoffice.com/">OfficevsOffice</a></p>
+      <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
+
+      <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
 
 <!--       <a class="logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
  -->
