--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <a class="pure-menu-heading hamburger" href=""><i class="fa fa-bars"></i></a>
           <ul>
               <li class="pure-menu-selected"><a href="#!/data">Get Data</a></li>
-              <li><a href="http://datacanvas.org/sense-your-city">About Data Canvas</a></li>
+              <li><a href="http://datacanvas.org">About Data Canvas</a></li>
           </ul>
 <!--           <a class="pure-menu-heading logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
  -->
@@ -42,7 +42,7 @@
     <footer>
       <p>Data Canvas is a Partnership between <a href="http://grayarea.org/">Gray Area Foundation</a>, <a href="http://www.swissnexsanfrancisco.org/">swissnex San Francisco</a>, and <a href="http://liftconference.com/lift15">Lift</a></p>
 
-      <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
+      <p class="credits"><a href="#!/data">Important disclaimers about the data</a> &mdash; <a href="http://localdata.com">Terms and Conditions</a></p>
 
       <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
 
