Add tweets and icons

--- a/src/index.html
+++ b/src/index.html
@@ -33,18 +33,17 @@
 
     <div id="main-region"></div>
 
-<!--     <div class="tweet">
-      <p>Temperatura em <a href="#">#Niteroi</a> <a href="#">#RioDeJaneiro</a> nos últimos dias frequentemente acima dos 30C tobie.github.io/datacanvas-vi... <a href="#">#DataCanvas</a> <a href="#">#Sensors</a> <a href="#">#Arduino</a></p>
-
-      <p class="source">About 15 hours ago from Rodrigo Padula's Twitter via Twitter Web Client</p>
+    <div id="twitter-region">
+      <div class="spinner"></div>
     </div>
- -->
+
     <footer>
-      <p>Data Canvas is a Partnership between <a href="http://grayarea.org/">Gray Area Foundation</a>, <a href="http://www.swissnexsanfrancisco.org/">swissnex San Francisco</a>, and <a href="http://liftconference.com/lift15">Lift</a></p>
+      <p>Data Canvas is a Partnership between <a href="http://grayarea.org/">Gray Area</a>, <a href="http://www.swissnexsanfrancisco.org/">swissnex San Francisco</a>, and <a href="http://liftconference.com/lift15">Lift</a></p>
+
+      <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
 
       <p class="credits"><a href="#!/data">Important disclaimers about the data</a> &mdash; <a href="http://localdata.com">Terms and Conditions</a></p>
 
-      <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
 
 <!--       <a class="logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
  -->
