--- a/src/index.html
+++ b/src/index.html
@@ -43,11 +43,9 @@
       <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
 
       <p class="credits"><a href="#!/data">Important disclaimers about the data</a> &mdash; <a href="http://localdata.com">Terms and Conditions</a></p>
-
-
-<!--       <a class="logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
- -->
     </footer>
+
+    <!-- test 123 -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
