--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,10 @@
 
       <p class="credits">This portal was built by <a href="http://localdata.com">LocalData</a>.</p>
 
-      <p class="credits"><a href="#!/data">Important disclaimers about the data</a> &mdash; <a href="http://localdata.com">Terms and Conditions</a></p>
+      <p class="credits"><a href="#!/data">Important disclaimers about the data</a> &mdash; <a href="http://datacanvas.org/sense-your-city">Terms and Conditions</a></p>
     </footer>
 
-    <!-- test 123 -->
+    <!-- test 345 -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
