Working city selector

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <a class="pure-menu-heading hamburger" href=""><i class="fa fa-bars"></i></a>
           <ul>
               <li class="pure-menu-selected"><a href="#!/data">Get Data</a></li>
-              <li><a href="http://datacanvas.org">About Data Canvas</a></li>
+              <li><a href="http://datacanvas.org" target="_blank">About Data Canvas</a></li>
           </ul>
 <!--           <a class="pure-menu-heading logo logo-grayscale" href="http://datacanvas.org">datacanvas.org</a>
  -->
